Define `TABLES_NEXT_TO_CODE` in the RTS configure
We create a new cabal flag to facilitate this.

--- a/rts/rts.cabal
+++ b/rts/rts.cabal
@@ -54,6 +54,8 @@ flag static-libzstd
   default: False
 flag leading-underscore
   default: False
+flag tables-next-to-code
+  default: False
 flag smp
   default: True
 flag find-ptr
