Define `TABLES_NEXT_TO_CODE` in the RTS configure
We create a new cabal flag to facilitate this.

--- a/rts/rts.cabal.in
+++ b/rts/rts.cabal.in
@@ -54,6 +54,8 @@ flag static-libzstd
   default: @CabalStaticLibZstd@
 flag leading-underscore
   default: @CabalLeadingUnderscore@
+flag tables-next-to-code
+  default: @CabalTablesNextToCode@
 flag smp
   default: True
 flag find-ptr
