--- a/linters/lint-commit-msg/lint-commit-msg.cabal
+++ b/linters/lint-commit-msg/lint-commit-msg.cabal
@@ -21,9 +21,6 @@ executable lint-commit-msg
 
   build-depends:
     linters-common,
-    mtl
-      >=2.1 && <2.4,
-    base
-       >= 4.14 && < 5,
-    text
-       >= 1.2  && < 2.1
+    mtl >=2.1 && <2.4,
+    base >= 4.14 && < 5,
+    text >= 1.2  && < 2.4
