--- a/linters/lint-submodule-refs/lint-submodule-refs.cabal
+++ b/linters/lint-submodule-refs/lint-submodule-refs.cabal
@@ -12,10 +12,8 @@ executable lint-submodule-refs
     Haskell2010
 
   build-depends:
-    base
-       >= 4.14 && < 5,
-    text
-       >= 1.2  && < 2.1,
+    base >= 4.14 && < 5,
+    text >= 1.2  && < 2.2,
     linters-common
 
   ghc-options:
