--- a/linters/lint-whitespace/lint-whitespace.cabal
+++ b/linters/lint-whitespace/lint-whitespace.cabal
@@ -19,13 +19,8 @@ executable lint-whitespace
 
   build-depends:
     linters-common,
-    mtl
-      >=2.1 && <2.4,
-    process
-      ^>= 1.6,
-    containers
-      ^>= 0.6,
-    base
-       >= 4.14 && < 5,
-    text
-       >= 1.2  && < 2.1,
+    mtl >=2.1 && <2.4,
+    process ^>= 1.6,
+    containers ^>= 0.6,
+    base >= 4.14 && < 5,
+    text >= 1.2  && < 2.2,
