base: Move internals of GHC.InfoProv into GHC.InfoProv.Types
Such that we can add new helpers into GHC.InfoProv.Types without
breakage.

(cherry picked from commit 90dc9a2def786fa465af82ccea4c6e8b09492388)

--- a/libraries/base/base.cabal
+++ b/libraries/base/base.cabal
@@ -337,6 +337,7 @@ Library
         Data.Semigroup.Internal
         Data.Typeable.Internal
         Foreign.ForeignPtr.Imp
+        GHC.InfoProv.Types
         GHC.IO.Handle.Lock.Common
         GHC.IO.Handle.Lock.Flock
         GHC.IO.Handle.Lock.LinuxOFD
