gitlab-ci: Allow release-hackage-lint to fail
Head.hackage is not robust in the presence of patches to boot packages,
as see in ghc/head.hackage#93. Allow it to fail for now.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -795,6 +795,7 @@ release-hackage-lint:
       artifacts: false
   rules:
     - if: '$RELEASE_JOB == "yes"'
+  allow_failure: true
   extends: .hackage
   variables:
     # No slow-validate bindist on release pipeline
