hadrian: Generate HSC2HS_EXTRAS variable in bindist installation
We must generate the hsc2hs wrapper at bindist installation time since
it must contain `--lflag` and `--cflag` arguments which depend upon the
installation path.

The solution here is to substitute these variables in the configure
script (see mk/hsc2hs.in). This is then copied over a dummy wrapper in
the install rules.

Fixes #24050.

--- a/distrib/configure.ac.in
+++ b/distrib/configure.ac.in
@@ -325,6 +325,7 @@ FP_SETTINGS
 AC_CONFIG_FILES([config.mk])
 AC_CONFIG_FILES([default.host.target])
 AC_CONFIG_FILES([default.target])
+AC_CONFIG_FILES([mk/hsc2hs])
 AC_OUTPUT
 
 # We get caught by
