Add -ddump-specialisations, -ddump-specialization
These flags will dump information about any specialisations generated as a
result of pragmas or the specialiser.

Resolves: #24032

--- a/compiler/ghc.cabal.in
+++ b/compiler/ghc.cabal.in
@@ -813,6 +813,7 @@ Library
         GHC.Types.CostCentre.State
         GHC.Types.Cpr
         GHC.Types.Demand
+        GHC.Types.DumpSpecInfo
         GHC.Types.Error
         GHC.Types.Error.Codes
         GHC.Types.FieldLabel
