--- a/configure.ac
+++ b/configure.ac
@@ -265,6 +265,7 @@ if test "${WithGhc}" != ""
 then
         bootstrap_host=`"${WithGhc}" +RTS --info | grep '^ ,("Host platform"' | sed -e 's/.*, "//' -e 's/")//' | tr -d '\r'`
         bootstrap_target=`"${WithGhc}" +RTS --info | grep '^ ,("Target platform"' | sed -e 's/.*, "//' -e 's/")//' | tr -d '\r'`
+	bootstrap_build="$bootstrap_host"
         if test "$bootstrap_host" != "$bootstrap_target"
         then
                 echo "Bootstrapping GHC is a cross compiler. This probably isn't going to work"
@@ -391,6 +392,20 @@ then
 else
   TargetPlatformFull="${target_alias}"
 fi
+if test -z "${build_alias}"
+then
+  # --target wasn't given; use result from AC_CANONICAL_TARGET
+  BuildPlatformFull="${build}"
+else
+  BuildPlatformFull="${build_alias}"
+fi
+if test -z "${host_alias}"
+then
+  # --target wasn't given; use result from AC_CANONICAL_TARGET
+  HostPlatformFull="${host}"
+else
+  HostPlatformFull="${host_alias}"
+fi
 if test "$CrossCompiling" = "YES"
 then
   # Use value passed by user from --target=
@@ -401,6 +416,8 @@ fi
 AC_SUBST(CrossCompiling)
 AC_SUBST(CrossCompilePrefix)
 AC_SUBST(TargetPlatformFull)
+AC_SUBST(BuildPlatformFull)
+AC_SUBST(HostPlatformFull)
 
 dnl ** Which gcc to use?
 dnl --------------------------------------------------------------
