--- a/compiler/ghc.cabal.in
+++ b/compiler/ghc.cabal.in
@@ -747,6 +747,7 @@ Library
         GHC.Types.Annotations
         GHC.Types.Avail
         GHC.Types.Basic
+        GHC.Types.BitSet
         GHC.Types.BreakInfo
         GHC.Types.CompleteMatch
         GHC.Types.CostCentre
