--- a/compiler/ghc.cabal.in
+++ b/compiler/ghc.cabal.in
@@ -47,7 +47,6 @@ extra-source-files:
     MachRegs/s390x.h
     MachRegs/wasm32.h
     MachRegs/x86.h
-    ghc-llvm-version.h
 
 
 custom-setup
@@ -92,7 +91,6 @@ Library
               Bytecodes.h
               ClosureTypes.h
               FunTypes.h
-              ghc-llvm-version.h
 
     if flag(build-tool-depends)
       build-tool-depends: alex:alex >= 3.2.6, happy:happy >= 1.20.0, genprimopcode:genprimopcode, deriveConstants:deriveConstants
@@ -319,6 +317,9 @@ Library
         GHC.CmmToLlvm.Mangler
         GHC.CmmToLlvm.Ppr
         GHC.CmmToLlvm.Regs
+        GHC.CmmToLlvm.Version
+        GHC.CmmToLlvm.Version.Bounds
+        GHC.CmmToLlvm.Version.Type
         GHC.Cmm.Dominators
         GHC.Cmm.Reducibility
         GHC.Cmm.Type
