--- a/hadrian/cfg/default.host.target.in
+++ b/hadrian/cfg/default.host.target.in
@@ -21,6 +21,7 @@ Target
 , ccLinkSupportsNoPie = False
 , ccLinkSupportsCompactUnwind = False
 , ccLinkSupportsFilelist = False
+, ccLinkSupportsSingleModule = True
 , ccLinkIsGnu = False
 }
 
