--- a/configure.ac
+++ b/configure.ac
@@ -452,6 +452,7 @@ CFLAGS="$CFLAGS $GccUseLdOpt"
 FP_PROG_LD_IS_GNU
 FP_PROG_LD_NO_COMPACT_UNWIND
 FP_PROG_LD_FILELIST
+FP_PROG_LD_SINGLE_MODULE
 
 
 dnl ** Which nm to use?
