Document ghc package's PVP-noncompliance
This changes nothing, it just makes the status quo explicit.

--- a/compiler/ghc.cabal.in
+++ b/compiler/ghc.cabal.in
@@ -20,6 +20,11 @@ Description:
     .
     See <https://gitlab.haskell.org/ghc/ghc/-/wikis/commentary/compiler>
     for more information.
+    .
+    __This package is not PVP-compliant.__
+    .
+    This package directly exposes GHC internals, which can and do change with
+    every release.
 Category: Development
 Build-Type: Custom
 
