--- a/distrib/configure.ac.in
+++ b/distrib/configure.ac.in
@@ -208,13 +208,13 @@ AC_CONFIG_FILES([mk/system-cxx-std-lib-1.0.conf])
 
 dnl ** Which otool to use on macOS
 dnl --------------------------------------------------------------
-AC_CHECK_TARGET_TOOL([OTOOL], [otool])
+AC_CHECK_TARGET_TOOL([OTOOL], [otool], [false])
 OtoolCmd="$OTOOL"
 AC_SUBST(OtoolCmd)
 
 dnl ** Which install_name_tool to use on macOS
 dnl --------------------------------------------------------------
-AC_CHECK_TARGET_TOOL([INSTALL_NAME_TOOL], [install_name_tool])
+AC_CHECK_TARGET_TOOL([INSTALL_NAME_TOOL], [install_name_tool], [false])
 InstallNameToolCmd="$INSTALL_NAME_TOOL"
 AC_SUBST(InstallNameToolCmd)
 
