Set default-language: GHC2021 in ghc library
Go through compiler/ sources, and remove
all BangPatterns (and other GHC2021 enabled extensions in these files).

--- a/ghc/ghc-bin.cabal.in
+++ b/ghc/ghc-bin.cabal.in
@@ -28,7 +28,7 @@ Flag threaded
     Manual: True
 
 Executable ghc
-    Default-Language: Haskell2010
+    Default-Language: GHC2021
 
     Main-Is: Main.hs
     Build-Depends: base       >= 4   && < 5,
