Revert "EPA: Move tokens into GhcPs extension fields (#23447)"
This reverts commit fe6d97dd202ed9fd84a146dd2cd2cea7fc91e825.

--- a/compiler/ghc.cabal.in
+++ b/compiler/ghc.cabal.in
@@ -945,6 +945,7 @@ Library
         Language.Haskell.Syntax
         Language.Haskell.Syntax.Basic
         Language.Haskell.Syntax.Binds
+        Language.Haskell.Syntax.Concrete
         Language.Haskell.Syntax.Decls
         Language.Haskell.Syntax.Expr
         Language.Haskell.Syntax.Extension
