DmdAnal: Explicit annotation state

--- a/compiler/ghc.cabal.in
+++ b/compiler/ghc.cabal.in
@@ -432,6 +432,7 @@ Library
         GHC.Data.Stream
         GHC.Data.Strict
         GHC.Data.StringBuffer
+        GHC.Data.STuple
         GHC.Data.TrieMap
         GHC.Data.Unboxed
         GHC.Data.UnionFind
